--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,19 +4,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  {% comment %} Page Meta {% endcomment %}
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <link rel="shortcut icon" href="{{ "/assets/favicons/favicon.ico" }}">
 
-  <link rel="shortcut icon" href="{{ asset "favicons/favicon.ico" }}">
-
-  {% comment %} Styles n Scripts {% endcomment %}
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Open+Sans:400italic,700italic,700,400">
   <link rel="stylesheet" href="{{ "/css/screen.css" | prepend: site.baseurl }}">
 
-  {% comment %} Additional header setup from Jekyll {% endcomment %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script type="text/javascript" src="{{ '/assets/javascripts/jquery-2.2.3.min.js' | prepend: site.baseurl }}"></script>
+  <meta property="og:url"         content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <meta property="og:type"        content="website">
+  <meta property="og:title"       content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:image"       content="{{ site.baseurl }}/content/images/{{ page.image }}">
+
+  <script type="text/javascript" src="{{ "/assets/javascripts/jquery-2.2.3.min.js" | prepend: site.baseurl }}"></script>
 </head>
