--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,19 +38,36 @@ body_class: post-template
     <div class="inner">
       <header>Share<a href="" class="close" title="Close">&times;</a></header>
       <div class="roon-share-links">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-dnt="true">Tweet</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <a class="twitter-share-button" href="https://twitter.com/intent/tweet">Tweet</a>
+        <script>window.twttr = (function(d, s, id) {
+          var js,fjs = d.getElementsByTagName(s)[0],t = window.twttr || {};
+          if (d.getElementById(id)) return t;
+          js = d.createElement(s);
+          js.id = id;
+          js.src = "https://platform.twitter.com/widgets.js";
+          fjs.parentNode.insertBefore(js, fjs);
+          t._e = [];
+          t.ready = function(f) {t._e.push(f);};
+          return t;
+        }(document,'script','twitter-wjs'));</script>
 
         <div id="fb-elems">
           <div id="fb-root"></div>
           <script>(function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=463438580397968";
-          fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));</script>
-          <div class="fb-like" data-send="false" data-layout="button_count" data-width="110" data-show-faces="false" data-font="arial"></div>
+            var js,fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document,'script','facebook-jssdk'));</script>
+          <div class="fb-like"
+            data-href="{{ page.url | prepend: site.baseurl | prepend: site.url }}"
+            data-layout="button_count"
+            data-width="110"
+            data-action="like"
+            data-show-faces="false"
+            data-share="false">
+          </div>
         </div>
 
         <div id="pinit-btn">
@@ -71,7 +88,7 @@ var disqus_config = function () {
 };
 (function() {
   var d = document, s = d.createElement('script');
-  s.src = '//akashaproject.disqus.com/embed.js';
+  s.src = 'https://akashaproject.disqus.com/embed.js';
   s.setAttribute('data-timestamp', +new Date());
   (d.head || d.body).appendChild(s);
 })();
