All share buttons rewritten; Using Font-awesome; Removed jquery, removed custom pictos;

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
   <div class="inner">
     <div class="vcard">
       <a href="{{ site.baseurl }}/feed.xml" id="btn_feed" class="btn" title="Feed" target="_blank">
-        <span aria-hidden="true" data-icon=")"></span>
+        <i class="fa fa-rss fa-lg" aria-hidden="true"></i>
         <strong>Feed</strong>
       </a>
 
