--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,27 +1,21 @@
 <head>
-  {% comment %} Document Settings {% endcomment %}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link rel="shortcut icon" href="{{ "/assets/favicons/favicon.ico" }}">
 
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Open+Sans:400italic,700italic,700,400">
   <link rel="stylesheet" href="{{ "/css/screen.css" }}">
+  <link rel="stylesheet" href="{{ "/css/font-awesome.css" }}">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend:site.baseurl | prepend:site.url }}">
-
-  <meta property="og:url"  content="{{ page.url | replace:'index.html','' | prepend:site.baseurl | prepend:site.url }}">
-  <meta property="og:type" content="website">
-  <meta property="og:title"
-    content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  <meta property="og:description"
-    content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines }}{% else %}{{ site.description }}{% endif %}">
-  <meta property="og:image"
-    content="{% if page.image %}{{ page.image | prepend:'/content/images/' | prepend:site.baseurl | prepend:site.url }}{% else %}{{ site.logo | prepend:'/assets/images/' | prepend:site.baseurl | prepend:site.url }}{% endif %}">
-
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-  <script type="text/javascript" src="{{ "/assets/javascripts/jquery-2.2.3.min.js" }}"></script>
+
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend:site.baseurl | prepend:site.url }}">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines }}{% else %}{{ site.description }}{% endif %}">
+  <meta property="og:image" content="{% if page.image %}{{ page.image | prepend:'/content/images/' | prepend:site.baseurl | prepend:site.url }}{% else %}{{ site.logo | prepend:'/assets/images/' | prepend:site.baseurl | prepend:site.url }}{% endif %}">
 </head>
