--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,7 +12,7 @@ body_class: page_template
 
 <article role="main" class="{% if page.image %}image{% endif %}">
   <header>
-    <a href="{{ site.baseurl }}/" id="home_link">«</a>
+    <a href="{{ site.baseurl }}/" id="home_link"><i class="fa fa-home fs-lg" aria-hidden="true"></i></a>
     <h1>{{ page.title }}</h1>
   </header>
 
@@ -21,4 +21,3 @@ body_class: page_template
   </div>
   {% include footer.html %}
 </article>
-
