--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ body_class: post-template
 
 <article role="main" class="{% if page.image %}image{% endif %}">
   <header>
-    <a href="{{ site.baseurl }}/" id="home_link">«</a>
+    <a href="{{ site.baseurl }}/" id="home_link"><i class="fa fa-home fa-lg" aria-hidden="true"></i></a>
     <div class="meta"><time datetime="{{ page.date | date:'%Y-%m-%d' }}"><a href="{{ page.url }}">{{ page.date | date: "%B %d, %Y" }}</a></time>
       <span class="count" id="js-reading-time">&nbsp;</span>
     </div>
@@ -23,77 +23,53 @@ body_class: post-template
     {{ content }}
   </div>
 
-  <menu>
-    <a href="" id="btn_share" class="btn" title="Share">
-      <span aria-hidden="true" data-icon="S"></span>
-      <strong>Share</strong>
-    </a>
-  </menu>
+  <div id="share-links">
+    <div class="share-link" style="width:90px;padding-top:7px;">
+      <span>Share this</span>
+    </div>
+    <div class="share-link">
+      <a href="https://www.facebook.com/sharer/sharer.php?s=100&amp;u={{ page.url | prepend:site.baseurl | prepend:site.url }}"
+        onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=620,width=600');return false;">
+        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="share-link">
+      <a href="https://twitter.com/intent/tweet?url={{ page.url | prepend:site.baseurl | prepend:site.url }}"
+        onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=260,width=600');return false;">
+        <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="share-link">
+      <a href="https://plus.google.com/share?title={{ page.title }}&amp;url={{ page.url | prepend:site.baseurl | prepend:site.url }}"
+        onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=620,width=560');return false;">
+        <i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i>
+      </a>
+    </div>
+    <div class="share-link">
+      <a href="https://www.linkedin.com/shareArticle?mini=true&amp;url={{ page.url | prepend:site.baseurl | prepend:site.url }}&amp;title={{ page.title }}&amp;summary={{ page.excerpt | strip_html | strip_newlines }}"
+      onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=560,width=600');return false;">
+        <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
 </article>
 
 {% include footer.html %}
 
-<div id="share_modal">
-  <div class="wrap">
-    <div class="inner">
-      <header>Share<a href="" class="close" title="Close">&times;</a></header>
-      <div class="roon-share-links">
-        <a class="twitter-share-button" href="https://twitter.com/intent/tweet">Tweet</a>
-        <script>window.twttr = (function(d, s, id) {
-          var js,fjs = d.getElementsByTagName(s)[0],t = window.twttr || {};
-          if (d.getElementById(id)) return t;
-          js = d.createElement(s);
-          js.id = id;
-          js.src = "https://platform.twitter.com/widgets.js";
-          fjs.parentNode.insertBefore(js, fjs);
-          t._e = [];
-          t.ready = function(f) {t._e.push(f);};
-          return t;
-        }(document,'script','twitter-wjs'));</script>
-
-        <div id="fb-elems">
-          <div id="fb-root"></div>
-          <script>(function(d, s, id) {
-            var js,fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document,'script','facebook-jssdk'));</script>
-          <div class="fb-like"
-            data-href="{{ page.url | prepend: site.baseurl | prepend: site.url }}"
-            data-layout="button_count"
-            data-width="110"
-            data-action="like"
-            data-show-faces="false"
-            data-share="false">
-          </div>
-        </div>
-
-        <div id="pinit-btn">
-          <a data-pin-do="buttonBookmark" href="https://www.pinterest.com/pin/create/button/">
-            <img src="//assets.pinterest.com/images/pidgets/pinit_fg_en_rect_gray_20.png" /></a>
-          <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <script>
-var disqus_config = function () {
+var disqus_config = function(){
   this.page.url = "{{ page.url | prepend: site.baseurl | prepend: site.url }}";
   this.page.identifier = "{{ page.id }}";
   this.page.title = "{{ page.title }}";
 };
-(function() {
+(function(){
   var d = document, s = d.createElement('script');
   s.src = 'https://akashaproject.disqus.com/embed.js';
   s.setAttribute('data-timestamp', +new Date());
   (d.head || d.body).appendChild(s);
 })();
 
-function get_text(elem) {
+function get_text(elem){
   ret = "";
   var length = elem.childNodes.length;
   for(var i = 0; i < length; i++) {
@@ -104,7 +80,7 @@ function get_text(elem) {
   }
   return ret;
 }
-function reading_time () {
+function reading_time(){
   var post_content = document.getElementById('js-post-content');
   if (post_content) {
     var words = get_text(post_content),
@@ -114,28 +90,9 @@ function reading_time () {
     document.getElementById('js-reading-time').appendChild(read_time_node);
   }
 }
-$(function(){
-  reading_time();
-
-  var share_modal = $("#share_modal"),
-  update_social_links = true;
-
-  $("#btn_share").click(function(){
-    var that = $(this);
-    share_modal.fadeIn(200);
-    return false;
-  });
-
-  share_modal.click(function(e){
-    if (e.target.className == "wrap" || e.target.id == "share_modal") {
-      share_modal.fadeOut(200);
-    }
-    return false;
-  });
-
-  share_modal.find("div.inner > header > a.close").click(function(){
-    share_modal.fadeOut(200);
-    return false;
-  });
-});
+document.onreadystatechange = function(){
+  if (document.readyState == "complete"){
+    reading_time();
+  }
+}
 </script>
