--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,21 +9,16 @@
         <i class="fa fa-rss fa-lg" aria-hidden="true"></i>
         <strong>Feed</strong>
       </a>
-
-      {% if site.logo %}
-      <a href="{{ site.baseurl }}" class="photo circle">
-        <span style="background-image: url('{{ site.baseurl }}/assets/images/{{ site.logo }}');">
-        <img src="{{ site.baseurl }}/assets/images/{{ site.logo }}" alt="{{ site.title }}"/>
-        </span>
-      </a>
-      {% endif %}
-
+      <div class="photo circle">
+        <svg id="footerLogo">
+          <use xlink:href="#logo" />
+        </svg>
+      </div>
       <div class="details">
         <h4><a href="{{ site.url }}" class="url n">{{ site.title }}</a></h4>
         <span>Published with <a href="https://jekyllrb.com">Jekyll</a>.</span>
       </div>
     </div>
-
     <div id="user_bio">
       <div class="inner">
         {{ site.description }}
