--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Open+Sans:400italic,700italic,700,400">
   <link rel="stylesheet" href="{{ "/css/screen.css" }}">
   <link rel="stylesheet" href="{{ "/css/font-awesome.css" }}">
+  <script <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend:site.baseurl | prepend:site.url }}">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
