--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,13 +16,28 @@
       </div>
       <div class="details">
         <h4><a href="{{ site.url }}" class="url n">{{ site.title }}</a></h4>
-        <span>Published with <a href="https://jekyllrb.com">Jekyll</a>.</span>
+        <span>Thoughts and project updates</span>
       </div>
     </div>
     <div id="user_bio">
       <div class="inner">
         {{ site.description }}
       </div>
+      <span class="links">
+        <a href="https://akasha-slack.herokuapp.com" target="_blank">
+          <i class="fa fa-lg fa-slack" aria-hidden="true"></i>
+        </a>&nbsp;
+        <a href="https://www.facebook.com/AkashaProject" target="_blank">
+          <i class="fa fa-lg fa-facebook" aria-hidden="true"></i>
+        </a>&nbsp;
+        <a href="https://twitter.com/AkashaProject" target="_blank">
+          <i class="fa fa-lg fa-twitter" aria-hidden="true"></i>
+        </a>&nbsp;
+        <i class="fa fa-lg fa-google-plus" aria-hidden="true"></i>&nbsp;
+        <a href="https://www.reddit.com/r/AkashaProject" target="_blank">
+          <i class="fa fa-lg fa-reddit-alien" aria-hidden="true"></i>
+        </a>
+      </span>
     </div>
   </div>
 </footer>
