Updated header and link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
   <span id="header-text">AKASHA</span>
   <ul>
     <li><a href="http://akasha.world/#joinAlpha">JOIN ALPHA</a></li>
+    <li><a href="http://akasha.world/#about">ABOUT</a></li>
     <li><a href="http://akasha.world/#roadmap">ROADMAP</a></li>
     <li><a href="http://akasha.world/#faq">FAQ</a></li>
     <li><a href="http://akasha.world/#team">TEAM</a></li>
@@ -19,7 +20,7 @@
 <header role="banner">
   <div class="wrap">
     <br />
-    <h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h1>Latest Entries</h1>
   </div>
 </header>
 
