Re-aranged links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
   <ul>
     <li><a href="http://akasha.world/#joinAlpha">JOIN ALPHA</a></li>
     <li><a href="http://akasha.world/#about">ABOUT</a></li>
-    <li><a href="http://akasha.world/#roadmap">ROADMAP</a></li>
-    <li><a href="http://akasha.world/#faq">FAQ</a></li>
     <li><a href="http://akasha.world/#team">TEAM</a></li>
     <li><a href="#" style="color:#0290DA">NEWS</a></li>
+    <li><a href="http://akasha.world/#faq">FAQ</a></li>
+    <li><a href="http://akasha.world/#roadmap">TIMELINE</a></li>
     <li><a href="http://akasha.world/#contact">CONTACT</a></li>
   </ul>
   <a href="#" id="menu-link">
