--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,9 @@
         <a href="https://twitter.com/AkashaProject" target="_blank">
           <i class="fa fa-lg fa-twitter" aria-hidden="true"></i>
         </a>&nbsp;
-        <i class="fa fa-lg fa-google-plus" aria-hidden="true"></i>&nbsp;
+        <a href="https://plus.google.com/117838843007595749679" target="_blank">
+          <i class="fa fa-lg fa-google-plus" aria-hidden="true"></i>
+        </a>&nbsp;
         <a href="https://www.reddit.com/r/AkashaProject" target="_blank">
           <i class="fa fa-lg fa-reddit-alien" aria-hidden="true"></i>
         </a>
