Header and footer tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,11 @@
         <strong>Feed</strong>
       </a>
       <div class="photo circle">
-        <svg id="footerLogo">
-          <use xlink:href="#logo" />
-        </svg>
+        <a href="https://akasha.world/">
+          <svg id="footerLogo">
+            <use xlink:href="#logo" />
+          </svg>
+        </a>
       </div>
       <div class="details">
         <h4><a href="{{ site.url }}" class="url n">{{ site.title }}</a></h4>
@@ -21,7 +23,7 @@
     </div>
     <div id="user_bio">
       <div class="inner">
-        {{ site.description }}
+        <span>Join AKASHA on</span>
       </div>
       <span class="links">
         <a href="https://akasha-slack.herokuapp.com" target="_blank">
