--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <nav id="nav" role="navigation">
-  <svg id="header-logo">
-    <use xlink:href="#logo" />
-  </svg>
-  <span id="header-text">AKASHA</span>
+  <a href="https://akasha.world/">
+    <svg id="header-logo">
+      <use xlink:href="#logo" />
+    </svg>
+    <span id="header-text">AKASHA</span>
+  </a>
   <ul>
     <li><a href="http://akasha.world/#joinAlpha">JOIN ALPHA</a></li>
     <li><a href="http://akasha.world/#about">ABOUT</a></li>
