Replace https with http;

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         <strong>Feed</strong>
       </a>
       <div class="photo circle">
-        <a href="https://akasha.world/">
+        <a href="http://akasha.world/">
           <svg id="footerLogo">
             <use xlink:href="#logo" />
           </svg>
