--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav id="nav" role="navigation">
-  <a href="https://akasha.world/">
+  <a href="http://akasha.world/">
     <svg id="header-logo">
       <use xlink:href="#logo" />
     </svg>
