--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,9 @@
   <link rel="apple-touch-icon" sizes="180x180"
       href="//akasha.world/dist/icons/apple-touch-icon-180x180.png" />
 
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic|Open+Sans:400italic,700italic,700,400">
+  <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' />
+  <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Roboto:300italic,300,100italic,100' />
+
   <link rel="stylesheet" href="{{ "/css/screen.css" }}">
   <link rel="stylesheet" href="{{ "/css/font-awesome.css" }}">
   <script src="//code.jquery.com/jquery-2.2.3.min.js"></script>
