--- a/css/screen.css
+++ b/css/screen.css
@@ -145,11 +145,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 body {
-	font-family: "Open Sans", "Helvetica Neue", "Helvetica-Neue", helvetica, sans-serif;
+	font-family: Roboto, "Open Sans", helvetica, sans-serif;
 }
 
 body .btn, body>header h1, body article header h1, body>footer .details h4, body .post-footer .details h4, body #share_modal header a.close, body.user article.feature h1 a {
-	font-family: Roboto, sans-serif;
+	font-family: Roboto, "Open Sans", helvetica, sans-serif;
 }
 
 .highlight .c {
